--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,7 @@
         </header>
 
         {% for post in posts %}
-            <article>
+            {{ posts }}
                 <time>published: 14.06.2014, 12:14</time>
                 <h2><a href="">My first post</a></h2>
                 <p>
@@ -17,9 +17,9 @@
                     Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
                     commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
                 </p>
-            </article>
+            {{ posts }}
 
-            <article>
+            {{ posts }}
                 <time>published: 14.06.2014, 12:14</time>
                 <h2><a href="">My second post</a></h2>
                 <p>
@@ -27,7 +27,7 @@
                     Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
                     commodo, tortor mauris condimentum nibh, ut f.
                 </p>
-            </article>
+            {{ posts }}
         {% endfor %}
     </body>
 </html>
