--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,9 @@
         <header class="page-header">
             <div class="container">
                 {% if user.is_authenticated %}
+                    <a href="{% url 'post_draft_list' %}" class="top-menu">
+                        {% include './icons/pencil-square.svg'%}
+                    </a>
                     <a href="{% url 'post_new' %}" class="top-menu">
                         {% include './icons/file-earmark-plus.svg' %}
                     </a>
