--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,9 +10,17 @@
             {% endif %}
         </aside>
         {% if post.published_date %}
-            <time class="date">
+            <div class="date">
                 {{ post.published_date }}
-            </time>
+            </div>
+        {% else %}
+            <aside class="actions">
+                <a class="btn btn-secondary" role="button" href="{% url 'post_publish' pk=post.pk %}">Publish
+                </a>
+                <a class="btn btn-secondary" href="{% url 'post_remove' pk=post.pk %}">
+                    {% include './icons/trash-fill.svg' %}
+                </a>
+            </aside>
         {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
